@@ -12,6 +12,7 @@ Version 5.0.7
   Bug #27668 FillSchema and Stored Proc with an out parameter
   Bug #28167 Poor performance building connection string (thanks Maxim!)
   Bug #26041 Connection Protocol Property Error in PropertyGrid Control
+  Bug #26754 EnlistTransaction throws false MySqlExeption "Already enlisted"
   
   Other changes
   -------------
